# basicpp

./: README.md
DebugPro/: CMakeLists.txt
DebugPro/include/: CArgvStatus.h  CDebug.h  GLOBAL.h
DebugPro/src/: CArgvStatus.cc  CDebug.cc  main.cc
FriendTest/: CMakeLists.txt
FriendTest/include/: a_class.h
FriendTest/src/: a_class.cc  b_class.cc  c_class.cc  main.cc
PtrFuncPro/: CMakeLists.txt
PtrFuncPro/include/: CPtrFunc.h
PtrFuncPro/src/: CPtrFunc.cc  main.cc
Singleton/: CMakeLists.txt
Singleton/include/: class_a.h  singleton.hpp  singleton1.hpp
Singleton/src/: class_a.cc  main.cc
